# TagDataTranslation

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSING.md  README.md  TagDataTranslation.sln
.github/workflows/: ci.yml  release-ios.yml  release-maven.yml  release-npm.yml  release-nuget.yml  release-pub.yml  release-pypi.yml  release.yml
TagDataTranslation-C#/: CLAUDE.md  PACKAGING  TagDataTranslation.nuspec  TagDataTranslation.sln
TagDataTranslation-C#/TagDataTranslation/: Log.cs  PrefixLengthResult.cs  TDTEngine.cs  TagDataTranslation.csproj  TagDataTranslation.nuspec  TranslateResult.cs  build-nuget.sh  packages.config
TagDataTranslation-C#/TagDataTranslation-net/: TagDataTranslation-net.csproj
TagDataTranslation-C#/TagDataTranslation-netstandard/: TagDataTranslation-netstandard.csproj
TagDataTranslation-C#/TagDataTranslation.Android/: TagDataTranslation.Android.csproj
TagDataTranslation-C#/TagDataTranslation.Wasm/: TagDataTranslation.Wasm.csproj
TagDataTranslation-C#/TagDataTranslation.iOS/: README.md  TagDataTranslation.iOS.csproj
TagDataTranslation-C#/TagDataTranslationDemo/: NLog.config  Program.cs  TagDataTranslationDemo.csproj  packages.config
docs/: Scheme-Conversion-Errata.md  TDS-2.3-Errata.md  TDS-2.3-Standard.md  TDT-2.2-Standard.md
npm/: README.md  package.json
pip/: README.md  pyproject.toml
pip/scripts/: build.py
pip/src/tag_data_translation/: __init__.py  _engine.py
scripts/: build-all.sh  build-android-native.sh  build-xcframework.sh  coverage.sh  publish-maven.sh  publish-npm.sh  release.sh
(+212 files in other folders)
